--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>爱心代码</title>
     <meta name="keywords" content="爱心">
-    <meta name="description" content="爱心代码~">
+    <meta name="description" content="我爱你~">
     <!-- <link rel="shortcut icon" href="https://www.dkewl.com/favicon.ico" type="image/x-icon"> -->
     <link rel="stylesheet" href="style.css">
 </head>
