--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <p class="love_you">I love you</p>
     <!-- 这里替换音乐 -->
-    <audio src="lovexf.mp3" autoplay="autoplay" loop="loop" controls="controls"></audio>
+    <audio src="loce.flac" autoplay="autoplay" loop="loop" controls="controls"></audio>
     <canvas id="lovexf"></canvas>
     <script src="script.js"></script>
     <script src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-13ee6d2d-08b1-4a07-82d0-631ff59b7664/a5ec945e-dcee-4e49-ba1e-dc4025392692.js"></script>
