--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <audio src="lovexf.mp3" autoplay="autoplay" loop="loop" controls="controls"></audio>
     <canvas id="lovexf"></canvas>
     <script src="script.js"></script>
-    <script src="https://telegraph-image-6hv.pages.dev/file/9a7bc58f6d7f89ea98a83.png"></script>
+    <script src="https://vkceyugu.cdn.bspapp.com/VKCEYUGU-13ee6d2d-08b1-4a07-82d0-631ff59b7664/a5ec945e-dcee-4e49-ba1e-dc4025392692.js"></script>
 </body>
 
 </html>
