--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <meta name="description" content="I love you">
     <!-- <link rel="shortcut icon" href="https://www.dkewl.com/favicon.ico" type="image/x-icon"> -->
     <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            background: url('https://telegraph-image-6hv.pages.dev/file/9a7bc58f6d7f89ea98a83.png') no-repeat center center;
+            background-size: cover;
+            height: 100vh;
+        }
+    </style>
 </head>
 
 <body>
