--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css">
 <style>
     body {
-        background: url('background4.webp') no-repeat center center;
+        background: url('background4.png') no-repeat center center;
         background-size: cover;
         height: 100vh;
     }
